@@ -1,3 +1,9 @@
+2014-08-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>
+
+	* src/gplt_x11.c:  For single byte fonts gnuplot_x11 uses a list of
+	previously used fonts to speed up the search for a new target font.
+	Now we add an equivalent for multi-byte font search.
+
 2014-08-14 Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (do_rectangle) src/graph3d.c (map3d_position_r):
